update to work with new workflow and with java 10